Fix for In aquatic and desert modes, 'Warning' icon in the dialog is not visible. & visual borders of the Model, 'Cancel' and 'OK' controls are not visible.

--- a/src/AdminSite/wwwroot/css/admin-custom.css
+++ b/src/AdminSite/wwwroot/css/admin-custom.css
@@ -505,9 +505,46 @@ button.navbar-toggler:focus, button.navbar-toggler:hover {
     font-weight: bold;
 }
 
-    .close:hover,
-    .close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@media screen and (prefers-color-scheme: light) {
+    .swal-button-container {
+        border: 1px solid;
     }
+
+    .swal-modal {
+        border: 1px solid;
+    }
+
+    .swal-icon--warning__body, .swal-icon--warning__dot {
+        border: 1px solid !important;
+    }
+    .swal-icon--success__line--long, .swal-icon--success__line--tip {
+        border: 1px solid !important;
+    }
+}
+
+@media screen and (prefers-color-scheme: dark) {
+    .swal-button-container {
+        border: 1px solid;
+    }
+
+    .swal-modal {
+        border: 1px solid;
+    }
+
+    .swal-icon--warning__body, .swal-icon--warning__dot {
+        border: 1px solid !important;
+    }
+
+    .swal-icon--success__line--long, .swal-icon--success__line--tip {
+        border: 1px solid !important;
+    }
+}
+
+
